- Allow elements to be selected/unselected even if they're behind the multiple selections box - Fix issue with elements losing focus on drag end and resize end - Update styles for elements that are part of multiple selections (outline opacity is reduced)

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,6 +31,11 @@
 	background-color: transparent !important;
 }
 
+.groupElement {
+    background-color: transparent;
+    outline: 2px solid rgba(235, 75, 72, 0.8) !important; // Reduce the outline opacity for boxes that are part of a group/multiple selection
+}
+
 .guide {
 	background: #EB4B48;
 	color: #EB4B48;
@@ -91,6 +96,7 @@
 	background-color: #FFF;
 	border: 2px solid #EB4B48;
 	position: absolute;
+	pointer-events: all;
 }
 
 .resizeCorners {
